force-app/main/default/objects/sugati__Tour_Setup__c/sugati__Tour_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Tour Setup settings</description>
    <label>Tour Setup</label>
</CustomObject>