force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Add_to_tour_statuses__c.field-meta.xml
<CustomField>
    <fullName>sugati__Add_to_tour_statuses__c</fullName>
    <description>Which opportunity statuses should allow a person to be added to a tour? Separate values with a comma.</description>
    <inlineHelpText>Which opportunity statuses should allow a person to be added to a tour? Separate values with a comma.</inlineHelpText>
    <label>Add to tour statuses</label>
    <type>TextArea</type>
</CustomField>