force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Allow_Agency_Tour_Bookings__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_Agency_Tour_Bookings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, an agency can be specified against a tour booking.</description>
    <inlineHelpText>If checked, an agency can be specified against a tour booking.</inlineHelpText>
    <label>Allow Agency Tour Bookings</label>
    <type>Checkbox</type>
</CustomField>