force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Allow_external_book_with_no_payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_external_book_with_no_payment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, external users have the option to complete a booking without making a payment. The label for this option is set in the &quot;Tour Book No Payment Label (External)&quot; Custom Label.</description>
    <inlineHelpText>If checked, external users have the option to complete a booking without making a payment. The label for this option is set in the &quot;Tour Book No Payment Label (External)&quot; Custom Label.</inlineHelpText>
    <label>Allow external book with no payment</label>
    <type>Checkbox</type>
</CustomField>