force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Allow_free_Tour_Places__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_free_Tour_Places__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow free Tour Places</label>
    <type>Checkbox</type>
</CustomField>