force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Allow_multi_person_booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_multi_person_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow multi-person booking</label>
    <type>Checkbox</type>
</CustomField>