force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Allow_non_travelling_lead_booker_on_tour__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allow_non_travelling_lead_booker_on_tour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow non-travelling lead booker on tour</label>
    <type>Checkbox</type>
</CustomField>