force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Allowed_Booking_Minutes__c.field-meta.xml
<CustomField>
    <fullName>sugati__Allowed_Booking_Minutes__c</fullName>
    <label>Allowed Booking Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>