force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Api_Log_lifetime_days__c.field-meta.xml
<CustomField>
    <fullName>sugati__Api_Log_lifetime_days__c</fullName>
    <description>The number of days to keep API logs</description>
    <label>Api Log lifetime (days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>