force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__API_Logging__c.field-meta.xml
<CustomField>
    <fullName>sugati__API_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn API logging on and off</description>
    <label>API Logging</label>
    <type>Checkbox</type>
</CustomField>