force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__API_Return_Statuses__c.field-meta.xml
<CustomField>
    <fullName>sugati__API_Return_Statuses__c</fullName>
    <description>Which statuses should be returned to the API as part of the get tours call?</description>
    <inlineHelpText>Which statuses should be returned to the API as part of the get tours call?</inlineHelpText>
    <label>API Return Statuses</label>
    <type>TextArea</type>
</CustomField>