force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Booking_Default_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Booking_Default_Record_Type__c</fullName>
    <inlineHelpText>Record type of opportunity which needs to be set for the tour bookings.</inlineHelpText>
    <label>Booking Default Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>