force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Booking_Form_Page_Override__c.field-meta.xml
<CustomField>
    <fullName>sugati__Booking_Form_Page_Override__c</fullName>
    <description>When adding to a tour, by default we go to /apex/AddToTour?id=[tour id]. You can override this behaviour here. For example, entering &quot;MyNewBookingForm?tourId=&quot; will redirect to /apex/MyNewBookingForm?tourId=[tour id]</description>
    <inlineHelpText>When adding to a tour, by default we go to /apex/AddToTour?id=[tour id]. You can override this behaviour here. For example, entering &quot;MyNewBookingForm?tourId=&quot; will redirect to /apex/MyNewBookingForm?tourId=[tour id]</inlineHelpText>
    <label>Booking Form Page Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>