force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Bypass_gender_check__c.field-meta.xml
<CustomField>
    <fullName>sugati__Bypass_gender_check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will bypass all gender checking code across tours (lifting the M/F restriction).</description>
    <inlineHelpText>Checking this box will bypass all gender checking code across tours.</inlineHelpText>
    <label>Bypass gender check</label>
    <type>Checkbox</type>
</CustomField>