force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__CLI_Default_show_on_manifest__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Default_show_on_manifest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should all new checklist items default to true for &apos;Show on Manifest&apos;?</inlineHelpText>
    <label>CLI Default show on manifest</label>
    <type>Checkbox</type>
</CustomField>