force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Convert_bookings_from_Room_Allocation__c.field-meta.xml
<CustomField>
    <fullName>sugati__Convert_bookings_from_Room_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then On Request and Waiting List bookings can be converted from the Room Allocation page.</description>
    <inlineHelpText>If checked, then On Request and Waiting List bookings can be converted from the Room Allocation page.</inlineHelpText>
    <label>Convert bookings from Room Allocation</label>
    <type>Checkbox</type>
</CustomField>