force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Default_Room_Allocation_Columns__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Room_Allocation_Columns__c</fullName>
    <description>Semi-colon separated list of room allocation columns for new tours</description>
    <label>Default Room Allocation Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>