force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Discount_Supplier_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__Discount_Supplier_Id__c</fullName>
    <description>The supplier that discounts are tours are created against</description>
    <inlineHelpText>The supplier that discounts are tours are created against</inlineHelpText>
    <label>Discount Supplier Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>