force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Dont_create_multiple_RAL_Records_for_DMC__c.field-meta.xml
<CustomField>
    <fullName>sugati__Dont_create_multiple_RAL_Records_for_DMC__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If a single DMC has multiple bulk cost rows on a tour, using them as an accommodation supplier will create room allocation records for each bulk cost SB. Check this to only create room allocation records for the first instance of that supplier bulk cost.</description>
    <inlineHelpText>If a single DMC has multiple bulk cost rows on a tour, using them as an accommodation supplier will create room allocation records for each bulk cost SB. Check this to only create room allocation records for the first instance of that supplier bulk cost.</inlineHelpText>
    <label>Dont create multiple RAL Records for DMC</label>
    <type>Checkbox</type>
</CustomField>