force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Earlybird_discount_on_first_booking_only__c.field-meta.xml
<CustomField>
    <fullName>sugati__Earlybird_discount_on_first_booking_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the earlybird discount will only be available to the main booker on a multi-person booking. If unchecked, as many earlybird discounts will be assigned as possible to the bookings.</description>
    <inlineHelpText>If checked, the earlybird discount will only be available to the main booker on a multi-person booking. If unchecked, as many earlybird discounts will be assigned as possible to the bookings.</inlineHelpText>
    <label>Earlybird discount on first booking only</label>
    <type>Checkbox</type>
</CustomField>