force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Email_Confirmation_Delay_Seconds__c.field-meta.xml
<CustomField>
    <fullName>sugati__Email_Confirmation_Delay_Seconds__c</fullName>
    <description>The number of seconds delay between a booking being confirmed and the email being sent.</description>
    <label>Email Confirmation Delay (Seconds)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>