force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Email_not_required_on_lead_booker__c.field-meta.xml
<CustomField>
    <fullName>sugati__Email_not_required_on_lead_booker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the email address is not required on the lead booker when making a tour booking.</description>
    <inlineHelpText>If checked, the email address is not required on the lead booker when making a tour booking.</inlineHelpText>
    <label>Email not required on lead booker</label>
    <type>Checkbox</type>
</CustomField>