force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Email_not_required_on_non_lead_bookers__c.field-meta.xml
<CustomField>
    <fullName>sugati__Email_not_required_on_non_lead_bookers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, an email address is not required on non-lead bookers on a tour.</description>
    <inlineHelpText>If checked, an email address is not required on non-lead bookers on a tour.</inlineHelpText>
    <label>Email not required on non-lead bookers</label>
    <type>Checkbox</type>
</CustomField>