force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Enable_Create_Auto_Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Create_Auto_Seat_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Create Auto Seat Number</label>
    <type>Checkbox</type>
</CustomField>