force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Enable_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Enquiries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to enable the &apos;enquiry&apos; functionality on tours.</description>
    <inlineHelpText>Check this to enable the &apos;enquiry&apos; functionality on tours.</inlineHelpText>
    <label>Enable Enquiries</label>
    <type>Checkbox</type>
</CustomField>