force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Enable_Price_Overrides__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Price_Overrides__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable price override functionality on tours.</description>
    <inlineHelpText>Enable price override functionality on tours.</inlineHelpText>
    <label>Enable Price Overrides</label>
    <type>Checkbox</type>
</CustomField>