force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Enable_Tour_Search__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Tour_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Tour Search</label>
    <type>Checkbox</type>
</CustomField>