force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Enable_Vehicle_Allocation__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Vehicle_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Vehicle Allocation</label>
    <type>Checkbox</type>
</CustomField>