force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Enforce_Sole_Use__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enforce_Sole_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then a single passenger will only be able to book onto a tour in a single room.</description>
    <inlineHelpText>If checked, then a single passenger will only be able to book onto a tour in a single room.</inlineHelpText>
    <label>Enforce Sole Use</label>
    <type>Checkbox</type>
</CustomField>