force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Ext_Booking_No_Payment_Expiry_Hours__c.field-meta.xml
<CustomField>
    <fullName>sugati__Ext_Booking_No_Payment_Expiry_Hours__c</fullName>
    <description>If an external booking is made with no payment, it will remain in progress for this number of hours, at which time it will go cold and inventory will be released unless a payment is made and the opportunity becomes booked.</description>
    <inlineHelpText>If an external booking is made with no payment, it will remain in progress for this number of hours, at which time it will go cold and inventory will be released unless a payment is made and the opportunity becomes booked.</inlineHelpText>
    <label>Ext Booking No Payment Expiry Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>