force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Free_Tour_Place__c.field-meta.xml
<CustomField>
    <fullName>sugati__Free_Tour_Place__c</fullName>
    <label>Free Tour Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>