force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Full_Price_Due__c.field-meta.xml
<CustomField>
    <fullName>sugati__Full_Price_Due__c</fullName>
    <inlineHelpText>No of days before the departure date</inlineHelpText>
    <label>Full Price Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>