force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Hide_Balance_Paid_on_Manifest__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hide_Balance_Paid_on_Manifest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the &quot;balance paid&quot; column is not displayed on the tour manifest or tour overview</description>
    <inlineHelpText>If checked, the &quot;balance paid&quot; column is not displayed on the tour manifest or tour overview</inlineHelpText>
    <label>Hide Balance Paid on Manifest</label>
    <type>Checkbox</type>
</CustomField>