force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Hide_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hide_Checklist_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Checklist Items</label>
    <type>Checkbox</type>
</CustomField>