force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Hide_Other_Reason_on_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hide_Other_Reason_on_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Other Reason on Discount</label>
    <type>Checkbox</type>
</CustomField>