force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Hide_Promo_Code_on_Public_Site__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hide_Promo_Code_on_Public_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Promo Code on Public Site</label>
    <type>Checkbox</type>
</CustomField>