force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__HTML_Itinerary_Opportunity_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__HTML_Itinerary_Opportunity_Field_Name__c</fullName>
    <description>The field name (API Name) of the field at opportunity that contains the link to the html itinerary</description>
    <inlineHelpText>The field name (API Name) of the field at opportunity that contains the link to the html itinerary</inlineHelpText>
    <label>HTML Itinerary Opportunity Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>