force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Ignore_roles__c.field-meta.xml
<CustomField>
    <fullName>sugati__Ignore_roles__c</fullName>
    <inlineHelpText>A list of group member roles (comma-separated) that should be ignored when calculating the number of passengers on a tour.</inlineHelpText>
    <label>Ignore roles</label>
    <type>TextArea</type>
</CustomField>