force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Ignore_tour_status_during_booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__Ignore_tour_status_during_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ignores the tour status during the booking, so that a custom can have their own on request / waiting list logic built into a custom booking form. If this is ticked, then we will allow a booking to continue if room allocations are not found (whereas before we would stop the booking process with an error message). Custom on request / waiting list logic MUST be built into the customer&apos;s booking form for this to work.</description>
    <inlineHelpText>Ignores the tour status during the booking, so that a custom can have their own on request / waiting list logic built into a custom booking form.</inlineHelpText>
    <label>Ignore tour status during booking</label>
    <type>Checkbox</type>
</CustomField>