force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Inherit_booking_record_type_from_tour__c.field-meta.xml
<CustomField>
    <fullName>sugati__Inherit_booking_record_type_from_tour__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked (and opportunities have record types), new bookings will inherit the RecordTypeId from the tour record.</description>
    <inlineHelpText>If checked (and opportunities have record types), new bookings will inherit the RecordTypeId from the tour record.</inlineHelpText>
    <label>Inherit booking record type from tour</label>
    <type>Checkbox</type>
</CustomField>