force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Live_Room_Allocation_Statuses__c.field-meta.xml
<CustomField>
    <fullName>sugati__Live_Room_Allocation_Statuses__c</fullName>
    <description>The room allocation statuses that should be considered &apos;live&apos; and add to the live room occupancy on the opportunity. Comma Separated.</description>
    <inlineHelpText>The room allocation statuses that should be considered &apos;live&apos; and add to the live room occupancy on the opportunity. Comma Separated.</inlineHelpText>
    <label>Live Room Allocation Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>