force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__No_Non_Travelling_Booker_in_Manifest__c.field-meta.xml
<CustomField>
    <fullName>sugati__No_Non_Travelling_Booker_in_Manifest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this to hide non-travelling lead bookers from the tour manifest</description>
    <inlineHelpText>Tick this to hide non-travelling lead bookers from the tour manifest</inlineHelpText>
    <label>No Non-Travelling Booker in Manifest</label>
    <type>Checkbox</type>
</CustomField>