force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Remove_discounts_on_cancellation__c.field-meta.xml
<CustomField>
    <fullName>sugati__Remove_discounts_on_cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, when a pax cancels from a tour and that pax has discounts applied, the discounts will not be included in further calculations.</description>
    <inlineHelpText>If checked, when a pax cancels from a tour and that pax has discounts applied, the discounts will not be included in further calculations.</inlineHelpText>
    <label>Remove discounts on cancellation</label>
    <type>Checkbox</type>
</CustomField>