force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Room_Allocation_Expiry_Check_Limit__c.field-meta.xml
<CustomField>
    <fullName>sugati__Room_Allocation_Expiry_Check_Limit__c</fullName>
    <description>The maximum number of room allocation records to check for when checking for expired room allocations every minute.</description>
    <inlineHelpText>The maximum number of room allocation records to check for when checking for expired room allocations every minute.</inlineHelpText>
    <label>Room Allocation Expiry Check Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>