force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Room_Allocation_Session_Length_minutes__c.field-meta.xml
<CustomField>
    <fullName>sugati__Room_Allocation_Session_Length_minutes__c</fullName>
    <label>Room Allocation Session Length (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>