force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Rooms_and_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sugati__Rooms_and_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rooms and Capacity</label>
    <type>Checkbox</type>
</CustomField>