force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Send_Extras_Payment_Reminder__c.field-meta.xml
<CustomField>
    <fullName>sugati__Send_Extras_Payment_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Extras Payment Reminder</label>
    <type>Checkbox</type>
</CustomField>