force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Show_Advanced_Options__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Advanced_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Advanced Options</label>
    <type>Checkbox</type>
</CustomField>