force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Show_Client_Invoice_on_Configure_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Client_Invoice_on_Configure_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Client Invoice field will be visible on the payment tab of Configure Booking.</description>
    <inlineHelpText>If checked, the Client Invoice field will be visible on the payment tab of Configure Booking.</inlineHelpText>
    <label>Show Client Invoice on Configure Booking</label>
    <type>Checkbox</type>
</CustomField>