force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Show_extra_items_on_invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_extra_items_on_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show extra items on invoice</label>
    <type>Checkbox</type>
</CustomField>