force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Show_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Product_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do we show the &apos;product type&apos; dropdown before going into tour template setup?</description>
    <label>Show Product Type</label>
    <type>Checkbox</type>
</CustomField>