force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Show_Roles__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Roles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Role dropdown will be shown on the traveller detail step of the tour booking journey.</description>
    <inlineHelpText>If checked, the Role dropdown will be shown on the traveller detail step of the tour booking journey.</inlineHelpText>
    <label>Show Roles</label>
    <type>Checkbox</type>
</CustomField>