force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Template_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__Template_Account_Id__c</fullName>
    <description>The Id of the account that templates and tours get associated with</description>
    <label>Template Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>