force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Template_Default_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Template_Default_Record_Type__c</fullName>
    <inlineHelpText>Provide the developer name of the record type which you want to set as default.</inlineHelpText>
    <label>Template Default Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>