force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Tour_Rate_Based_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Rate_Based_On__c</fullName>
    <defaultValue>&quot;Room Type&quot;</defaultValue>
    <description>Tells the system to base tour rates on a specific room type or the number sharing in the room. Possible options are &quot;Room Type&quot; or &quot;How Many Sharing&quot;</description>
    <inlineHelpText>Tells the system to base tour rates on a specific room type or the number sharing in the room. Possible options are &quot;Room Type&quot; or &quot;How Many Sharing&quot;</inlineHelpText>
    <label>Tour Rate Based On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>