force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Tour_Search_Days_either_side__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Search_Days_either_side__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Determine the number of days either side of a date that is searched in tour search</description>
    <inlineHelpText>Determine the number of days either side of a date that is searched in tour search</inlineHelpText>
    <label>Tour Search - Days either side</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>