force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Tour_Search_Use_Capacity_for_remaining__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Search_Use_Capacity_for_remaining__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the tour search results will use the Capacity field for remaining spaces, otherwise it will use Live Room Capacity</description>
    <inlineHelpText>If checked, the tour search results will use the Capacity field for remaining spaces, otherwise it will use Live Room Capacity</inlineHelpText>
    <label>Tour Search - Use Capacity for remaining</label>
    <type>Checkbox</type>
</CustomField>