force-app/main/default/objects/sugati__Tour_Setup__c/fields/sugati__Vehicle_Supplier_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Vehicle_Supplier_Record_Type__c</fullName>
    <defaultValue>&quot;Transfer;DMC&quot;</defaultValue>
    <inlineHelpText>Default are Transfer or DMC, each value separate by a comma</inlineHelpText>
    <label>Vehicle Supplier Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>